# Infinidesk

./: .clangd  .gitignore  README.md  flake.nix  infinidesk.desktop  meson.build
.github/workflows/: build.yml
.zed/: tasks.json
include/infinidesk/: background.h  canvas.h  config.h  cursor.h  drawing.h  drawing_ui.h  input.h  keyboard.h  layer_shell.h  output.h  server.h  switcher.h  view.h  xdg_shell.h  xwayland.h
src/: background.c  canvas.c  config.c  cursor.c  drawing.c  drawing_ui.c  input.c  keyboard.c  layer_shell.c  main.c  output.c  server.c  switcher.c  view.c  xdg_shell.c  xwayland.c
